PG module