@@ -31,14 +31,14 @@ public class URLIdentifierUtilsTest {
 	@Test
 	public void testParseURLIdentifier_basic() {
 		URLIdentifier identifier = URLIdentifierUtils.parseURLIdentifier("45-test");
-		assertEquals(new Long(45L), identifier.getId());
+		assertEquals(Long.valueOf(45L), identifier.getId());
 		assertEquals("test", identifier.getName());
 	}
 
 	@Test
 	public void testParseURLIdentifier_special() {
 		URLIdentifier identifier = URLIdentifierUtils.parseURLIdentifier("45-test+WTF%252Fmin");
-		assertEquals(new Long(45L), identifier.getId());
+		assertEquals(Long.valueOf(45L), identifier.getId());
 		assertEquals("test WTF%2Fmin", identifier.getName());
 	}
 
@@ -46,7 +46,7 @@ public class URLIdentifierUtilsTest {
 	public void testParseURLIdentifier_unicode() {
 		URLIdentifier identifier = URLIdentifierUtils.parseURLIdentifier(
 				"45-test+%C4%8Desk%C3%BDch+zn%C3%A1%C4%8Dk%C5%AF+a+%C5%BElu%C5%A5ou%C4%8Dk%C3%BDch+%C5%BEiraf+%C5%87%21");
-		assertEquals(new Long(45L), identifier.getId());
+		assertEquals(Long.valueOf(45L), identifier.getId());
 		assertEquals("test českých znáčků a žluťoučkých žiraf Ň!", identifier.getName());
 	}
 
